<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:id="@+id/rl_toolbar"
        android:background="@color/colorLoginButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:src="@drawable/arrow_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:padding="8dp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:id="@+id/tv_toolbar_text"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="20sp"
            android:text="Add admin"
            />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_firstname"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/et_surname"
        android:textSize="16sp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/firstname"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_surname"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/et_middlename"
        android:textSize="16sp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/surname"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_middlename"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/et_email"
        android:textSize="16sp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/middlename"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="16sp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:lines="1"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/password"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_confirm_password"
        android:layout_below="@+id/et_password"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:lines="1"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/confirm_password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:id="@+id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_confirm_password"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:textAllCaps="false"
        android:text="Register admin"
        android:background="@drawable/button_sign_in"
        android:textColor="@android:color/black"
        />

</RelativeLayout>