<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/deliverybox"
        android:layout_marginTop="@dimen/_30sdp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="16sp"
        android:lines="1"
        android:inputType="textNoSuggestions"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:textColor="@color/app_text_color"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:lines="1"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/app_text_color"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/password"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_confirm_password"
        android:layout_below="@+id/et_password"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:lines="1"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/app_text_color"
        android:textColorHint="@color/app_hint_text_color"
        android:hint="@string/confirm_password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:id="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_confirm_password"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:textAllCaps="false"
        android:text="Continue"
        android:background="@drawable/button_sign_in"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_in_member"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:textSize="12sp"
        android:background="@color/color_bg_light_black"
        android:textColor="@color/app_text_color"
        android:text="Already have account? Sign in"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_text_color"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:id="@+id/tv_sign_up_label" />

</RelativeLayout>